--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:postgresql://localhost/planificador
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.quitwait=false
